2026-02-05_egd_argocd/day2/example-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-manifests
  labels:
    app: example-manifests
spec:
  selector:
    app: example-manifests
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: metrics
      port: 8001
