2026-02-05_egd_argocd/day2/example-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-manifests
  annotations:
    route.openshift.io/termination: "edge"
    route.openshift.io/insecureEdgeTerminationPolicy: "Redirect"
spec:
  ingressClassName: openshift-default
  rules:
    - host: example-manifests.apps.egd.germanywestcentral.aroapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-manifests
                port:
                  number: 80
